--- a/ai/Megatron/English/Python/Start_Here.ipynb
+++ b/ai/Megatron/English/Python/Start_Here.ipynb
@@ -13,27 +13,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this bootcamp is designed for training very large language models with NVIDIA [Megatron-LM](https://github.com/NVIDIA/Megatron-LM) in a step-wised manner. \n",
+    "The objective of this boot camp is designed for training very large language models with NVIDIA [Megatron-LM](https://github.com/NVIDIA/Megatron-LM) in a step-wised manner. \n",
     "\n",
     "There are two labs, each with a focus point. \n",
     "\n",
     "In Lab 1, we will learn the default [Megatron-LM](https://github.com/NVIDIA/Megatron-LM) workflow, highlighting :\n",
     "\n",
-    "   - How to calculate time-to-compute needs for resource planning.\n",
+    " - How to calculate time-to-compute needs for resource planning.\n",
     "    \n",
-    "   - Understanding Megatron-LM's core engine - Model Parallel Unit(MPU)\n",
-    "    \n",
-    "   - Profiling : core concepts on GPUs performance across multi-gpus and/or multi-node runs.\n",
+    " - Understanding Megatron-LM's core engine - Model Parallel Unit(MPU)\n",
+    " \n",
+    " - Profiling : core concepts on GPUs performance across multicampus and/or multi-node runs.\n",
     "\n",
-    "In Lab 2, the focus is shifted to the **customization** of [Megatron-LM](https://github.com/NVIDIA/Megatron-LM) workflow. We will walk through and exercise steps for customization of the Megatron-LM's workflow in order to address to local langauge needs.  \n",
+    "In Lab 2, the focus is shifted to the **customization** of [Megatron-LM](https://github.com/NVIDIA/Megatron-LM) workflow. We will walk through and exercise steps for customization of the Megatron-LM's workflow in order to address to local language needs.  \n",
     "\n",
     "\n",
     "* Standard: Python\n",
-    "* Frameworks: Pytorch + Megatron-LM \n",
+    "* Frameworks: PyTorch + Megatron-LM \n",
     "\n",
-    "It is required to have more than one GPU for this bootcamp.\n",
+    "It is required to have more than one GPU for this boot camp.\n",
     "\n",
-    "This bootcamp is tested on 2 x A100 GPUs with 40G memory. One should also have [NVLink / NVSwitch](https://www.nvidia.com/en-in/data-center/nvlink/)."
+    "This boot camp is tested on 2 x A100 GPUs with 40G memory. One should also have [NVLink / Switch](https://www.nvidia.com/en-in/data-center/nvlink/)."
    ]
   },
   {
