adding TAO to experimentals directory

--- a/experimental/TAO_Transfer_Learning/English/start_here.ipynb
+++ b/experimental/TAO_Transfer_Learning/English/start_here.ipynb
@@ -93,8 +93,7 @@
     "%env DATA_DOWNLOAD_DIR=/workspace/tlt-experiments/data\n",
     "#%env SPECS_DIR=/workspace/tlt-experiments/classification/specs\n",
     "%env SPECS_DIR=/workspace/tlt-experiments/specs\n",
-    "%env KEY='aWNydmQ5bGRjNmppcDdoOTUwMGxuMHYzaWQ6MzFkYWI4ZTItYTEwZi00YTY4LWE5NTctYzJkNjQwMjUwMDdk'\n",
-    "#%env KEY=''"
+    "%env KEY='place your ngc api key here'\n"
    ]
   },
   {
@@ -109,7 +108,7 @@
    "metadata": {},
    "source": [
     "We will be using the pascal VOC dataset for the tutorial. To find more details please visit \n",
-    "http://host.robots.ox.ac.uk/pascal/VOC/voc2012/index.html#devkit. if you intend to run this notebook on your local workstation, Please download the dataset present at http://host.robots.ox.ac.uk/pascal/VOC/voc2012/VOCtrainval_11-May-2012.tar to $DATA_DOWNLOAD_DIR or `workspace/tlt-experiments/data`."
+    "http://host.robots.ox.ac.uk/pascal/VOC/voc2012/index.html#devkit. if you intend to run this notebook on your local workstation without using a container, Please download the dataset present at http://host.robots.ox.ac.uk/pascal/VOC/voc2012/VOCtrainval_11-May-2012.tar to $DATA_DOWNLOAD_DIR or `workspace/tlt-experiments/data`."
    ]
   },
   {
