adding TAO to experimentals directory

--- a/experimental/TAO_Transfer_Learning/English/start_here.ipynb
+++ b/experimental/TAO_Transfer_Learning/English/start_here.ipynb
@@ -62,8 +62,8 @@
     "- Next, you would find at the top right corner a `Generate API Key` button, click on this button. A dialog box would appear after the click, you must click on the `confirm` button on it.\n",
     "- Finally, copy your generated API Key and Username, and save it somewhere on your local system.\n",
     "\n",
-    "<img align=\"center\" src=\" image/ngc_setup_key.PNG\" width=\"600\"> \n",
-    "<img align=\"center\" src=\" image/ngc_key.PNG\" width=\"700\">\n",
+    "<img align=\"center\" src=\"images/ngc_setup_key.PNG\" width=\"600\"> \n",
+    "<img align=\"center\" src=\"images/ngc_key.PNG\" width=\"700\">\n",
     "\n",
     "## API Key\n",
     "\n",
@@ -489,7 +489,7 @@
    "source": [
     "## 6. Retrain pruned models <a class=\"anchor\" id=\"head-6\"></a>\n",
     "* Model needs to be re-trained to bring back accuracy after pruning\n",
-    "- Run the cell below to view the retrain spec configuration file. Your task would be to modify the hyper-parameters to achieve desirable accuracy result. You can access the `classification_retrain_spec.cfg` file in the `spec folder` seen at the top left-side of the jupyter lab. Please, remember to save the file with `ctl s` after modification and then rerun the cell below to see if your changes have reflected."
+    "- Run the cell below to view the retrain spec configuration file. Your task would be to modify the hyper-parameters to achieve desirable accuracy result. You can access the `classification_retrain_spec.cfg` file in the `specs folder` seen at the top left-side of the jupyter lab. Please, remember to save the file with `ctl s` after modification and then rerun the cell below to see if your changes have reflected."
    ]
   },
   {
@@ -735,7 +735,7 @@
     "---\n",
     "### Source\n",
     "\n",
-    "This Notebook was adapted from examples within NVIDIA TLT container.\n",
+    "This Notebook was adapted from examples within NVIDIA TLT/TAO Docker container pulled from ngc.nvidia.com\n",
     "\n",
     "### Licensing \n",
     "\n",
